Mon Aug 11 09:38:08 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: whack a doubled paragraph.

Fri Aug 08 17:20:59 2003  George Lebl <jirka@5z.com>

	* docs/C/gdm.xml: fill in missing info in the theme manual

	* gui/greeter/greeter_geometry.c, gui/greeter/greeter_item.h,
	  gui/greeter/greeter_parser.c:
	  respect negative coordinates with "-0", must store the
	  negativity in a flag for that.

	* gui/greeter/greeter_item_pam.c: break all pam messages at
	  50 columns, not just pam-error (actually those are not
	  all pam messages we just call them that)

	* gui/greeter/greeter_parser.c: parse "active" for text
	  items, not just prelight and normal.
	  
	* gui/greeter/greeter_item.c: fix typo in g_warning

Fri Aug 08 09:35:41 2003  George Lebl <jirka@5z.com>

	* Release 2.4.2.100

Thu Aug 07 17:59:25 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, config/gdm.conf.in: Remove
	  the SessionMaxFile key since it wasn't used anyway (we've killed
	  the GNOME session chooser).  Also fixup the comment on XDMCP
	  enabling.

	* docs/C/gdm.xml: add more comments on security of XDMCP, fixup
	  the screen sections a bit, whack SessionMaxFile entry

Wed Aug 06 17:40:27 2003  George Lebl <jirka@5z.com>

	* gdmsetup-pam: don't use the paths but let pam find modules itself

	* gui/gdmlogin.c, gui/greeter/greeter_item_ulist.c: limit number of
	  users at 100 (rather then 50) where it really becomes bad.  We need
	  to handle this in a nicer way.

	* daemon/xdmcp.c: make the globsessid default to rand() so that they
	  really differ from run to run, rather then just time(NULL).  check
	  tcp wrappers for managed_forward and got_managed_forward (just to
	  be anal), also check tcp wrappers on forward query, the Alive packet
	  now gets sent with real info rather then just whatever keepalive
	  sent us (and thus follows the spec).  Make sure the session id is
	  never zero as that can happen now.  Send at most one unwilling packet