@@ -1,3 +1,7 @@
+Tue Aug 12 17:48:45 2003  George Lebl <jirka@5z.com>
+
+	* daemon/gdm.c: check operating system on startup
+
 Mon Aug 11 09:38:08 2003  George Lebl <jirka@5z.com>
 
 	* docs/C/gdm.xml: whack a doubled paragraph.
